2007-10-18  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/*: Change all 'Your Name' phrases to
	'Firstname Lastname'.

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckReadme): Search
	phrase 'Firstname Lastname'.
	(CygbuildConfCC): Change variable $conf from srcdir to
	builddir.
	(CygbuildCmdConfMain): Handle autoreconf case better.
	(CygbuildBootVariablesGlobalMain): Add .git and
	.darcs to CYGBUILD_SHADOW_TOPLEVEL_IGNORE.

2007-10-01  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckShellFiles):
	shorten message by using relative path. Display symlink destination.
	Correct for-loop to check only files.
	(CygbuildCmdInstallCheckSetupHint): Correct variable name 'retval'.
	Added 'category:' line check.
	(CygbuildDefineGlobalCommands): Rewrote perl and python handling.
	Define variables PERL_VERSION, PYTHON_VERSION, PYTHON_LIBDIR.
	(CygbuildSetLDPATHpython): Use PYTHON_LIBDIR.
	(CygbuildPatchApplyMaybe): if there is no *.patch, ignore ls(1)
	message.
	(CygbuildBootVariablesGlobalMain):
	cygbuild_opt_exclude_object_files: exclude *egg-info
	(CygbuildPatchCheck): Adjusted regexp to check *.c files.
	Display file name in message 'patch contains files'.
	(CygbuildInstallFixPermissions): New.
	(CygbuildChmodExec): Change +x to ugo+x.
	(CygbuildChmodDo): New.

2007-09-30  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildPatchApplyMaybe): Unpatch files
	in reverse order.

2007-09-28  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckReadme):
	Corrected version regexp.
	(CygbuildCmdInstallCheckLibFiles): Fix call to cygcheck function.
	(CygbuildReadmeReleaseMatchCheck): Impreoved awk gsub() regexp.
	(CygbuildInstallFixMain): New.
	(CygbuildInstallFixMandir): New.
	(CygbuildCmdInstallCheckLibFiles): Comment out one echo.

2007-09-20  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/postinstall.sh.tmp (InstallConffiles): Use 'egrep -E'
	and better regexp to ignore also empty lines.
